--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": "^7.4",
-        "spatie/laravel-dashboard": "^1.0"
+        "spatie/laravel-dashboard": ">=1.0 <3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
