--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php": "^7.4",
+        "php": ">=7.4",
         "spatie/laravel-dashboard": ">=1.0 <3.0"
     },
     "require-dev": {
