--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
-        "spatie/laravel-dashboard": ">=1.0 <3.0"
+        "php": ">=8.2",
+        "spatie/laravel-dashboard": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
